--- a/trex.config
+++ b/trex.config
@@ -1,10 +1,17 @@
-nuclei
-  number               integer
-  charge               double precision   (nuclei_number)
-  coord                double precision   (3,nuclei_number)
-  label                character*(32)     (nuclei_number)
+metadata
+  description          character*(256)
+  code_num             integer
+  code                 character*(64)  (metadata_code_num)
+  author_num           integer
+  author               character*(64)  (metadata_author_num)
 
-electrons
-  number_up            integer
-  number_dn            integer
+nucleus
+  num                  integer
+  charge               double precision   (nucleus_num)
+  coord                double precision   (3,nucleus_num)
+  label                character*(64)     (nucleus_num)
+
+electron
+  up_num               integer
+  dn_num               integer
 
