Set and get functions

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,6 +1,8 @@
 include ../make.config
 
-all: fortran_write fortran_write
+EXE=fortran_write fortran_read
+
+all: $(EXE)
 
 ../lib/libtrexio.so ../src/trexio.f90:
 	make -C ../src
@@ -8,9 +10,12 @@ all: fortran_write fortran_write
 trexio.f90: ../src/trexio.f90
 	cp $^ $@
 
+fortran_read: fortran_read.f90 trexio.o
+	$(FC) -o $@ $^ -L../lib -ltrexio -lz
+
 fortran_write: fortran_write.f90 trexio.o
 	$(FC) -o $@ $^ -L../lib -ltrexio -lz
 
 
 clean:
-	rm -rf trexio.o trexio.f90 trexio.mod fortran_write trex_file
+	rm -rf trexio.o trexio.f90 trexio.mod $(EXE) trex_file
