Added write basis

--- a/trex.config
+++ b/trex.config
@@ -15,5 +15,15 @@ electron
   up_num               integer
   dn_num               integer
 
-pseudopotential
+basis
   type                 character*(32)
+  shell_num            integer
+  shell_factor         double precision   (basis_shell_num)
+  shell_center         integer            (basis_shell_num)
+  shell_ang_mom        character          (basis_shell_num)
+  shell_prim_num       integer            (basis_shell_num)
+  prim_index           integer            (basis_shell_num)
+  prim_num             integer
+  exponent             double precision   (basis_prim_num)
+  coefficient          double precision   (basis_prim_num)
+
