--- a/trex.config
+++ b/trex.config
@@ -6,24 +6,24 @@ metadata
   author               character*(64)  (metadata_author_num)
 
 nucleus
-  num                  integer
+  num                  integer*8
   charge               double precision   (nucleus_num)
   coord                double precision   (3,nucleus_num)
   label                character*(64)     (nucleus_num)
 
 electron
-  up_num               integer
-  dn_num               integer
+  up_num               integer*8
+  dn_num               integer*8
 
 basis
   type                 character*(32)
-  shell_num            integer
-  shell_factor         double precision   (basis_shell_num)
-  shell_center         integer            (basis_shell_num)
-  shell_ang_mom        character          (basis_shell_num)
-  shell_prim_num       integer            (basis_shell_num)
-  prim_index           integer            (basis_shell_num)
-  prim_num             integer
+  shell_num            integer*8
+  shell_factor         double precision     (basis_shell_num)
+  shell_center         integer*8            (basis_shell_num)
+  shell_ang_mom        integer              (basis_shell_num)
+  shell_prim_num       integer*8            (basis_shell_num)
+  prim_index           integer*8            (basis_shell_num)
+  prim_num             integer*8
   exponent             double precision   (basis_prim_num)
   coefficient          double precision   (basis_prim_num)
 
