Added flag for cartesian

--- a/trex.config
+++ b/trex.config
@@ -17,6 +17,7 @@ electron
 
 basis
   type                 character*(32)
+  cartesian            logical
   shell_num            integer*8
   shell_factor         double precision     (basis_shell_num)
   shell_center         integer*8            (basis_shell_num)
