Add MOs and integrals

--- a/trex.config
+++ b/trex.config
@@ -10,6 +10,7 @@ nucleus
   charge               double precision   (nucleus_num)
   coord                double precision   (3,nucleus_num)
   label                character*(64)     (nucleus_num)
+  point_group          character*(64)
 
 electron
   up_num               integer*8
@@ -25,6 +26,47 @@ basis
   shell_prim_num       integer*8            (basis_shell_num)
   prim_index           integer*8            (basis_shell_num)
   prim_num             integer*8
-  exponent             double precision   (basis_prim_num)
-  coefficient          double precision   (basis_prim_num)
+  exponent             double precision     (basis_prim_num)
+  coefficient          double precision     (basis_prim_num)
+  num                  integer
+
+basis_1e_int
+  overlap            double precision (basis_num,basis_num)
+  kinetic            double precision (basis_num,basis_num)
+  potential          double precision (basis_num,basis_num)
+  ecp_local          double precision (basis_num,basis_num)
+  ecp_non_local      double precision (basis_num,basis_num)
+  core_hamiltonian   double precision (basis_num,basis_num)
+
+basis_2e_int
+  eri_num            integer
+  eri_indices        integer          (4,basis_2e_int_eri_num)
+  eri_values         double precision (basis_2e_int_eri_num)
+  eri_lr_num         integer
+  eri_lr_indices     integer          (4,basis_2e_int_eri_lr_num)
+  eri_lr_values      double precision (basis_2e_int_eri_lr_num)
+
+mo
+  type                 character*(32)
+  num                  integer
+  coef                 double precision   (basis_num,mo_num)
+  class                character*(32)     (mo_num)
+  symmetry             character*(32)     (mo_num)
+  occupation           double precision   (mo_num)
+
+mo_1e_int
+  kinetic            double precision (mo_num,mo_num)
+  potential          double precision (mo_num,mo_num)
+  ecp_local          double precision (mo_num,mo_num)
+  ecp_non_local      double precision (mo_num,mo_num)
+  core_hamiltonian   double precision (mo_num,mo_num)
+
+mo_2e_int
+  eri_num            integer
+  eri_indices        integer          (4,mo_2e_int_eri_num)
+  eri_values         double precision (mo_2e_int_eri_num)
+  eri_lr_num         integer
+  eri_lr_indices     integer          (4,mo_2e_int_eri_lr_num)
+  eri_lr_values      double precision (mo_2e_int_eri_lr_num)
+
 
