--- a/trex.config
+++ b/trex.config
@@ -5,6 +5,10 @@ metadata
   author_num           integer
   author               character*(64)  (metadata_author_num)
 
+electron
+  up_num               integer*8
+  dn_num               integer*8
+
 nucleus
   num                  integer*8
   charge               double precision   (nucleus_num)
@@ -12,12 +16,22 @@ nucleus
   label                character*(64)     (nucleus_num)
   point_group          character*(64)
 
-electron
-  up_num               integer*8
-  dn_num               integer*8
+ecp
+  lmax_p1              integer          (nucleus_num)
+  z_core               integer          (nucleus_num)
+  local_n              integer          (nucleus_num)
+  local_n_max          integer
+  local_exponent       double precision (ecp_local_n_max,nucleus_num)
+  local_coef           double precision (ecp_local_n_max,nucleus_num)
+  local_power          integer          (ecp_local_n_max,nucleus_num)
+  non_local_n          integer          (nucleus_num)
+  non_local_n_max      integer
+  non_local_exponent   double precision (ecp_non_local_n_max,nucleus_num)
+  non_local_coef       double precision (ecp_non_local_n_max,nucleus_num)
+  non_local_power      integer          (ecp_non_local_n_max,nucleus_num)
 
 basis
-  type                 character*(32)
+  type                 character*(64)
   cartesian            logical
   shell_num            integer*8
   shell_factor         double precision     (basis_shell_num)
@@ -47,11 +61,11 @@ basis_2e_int
   eri_lr_values      double precision (basis_2e_int_eri_lr_num)
 
 mo
-  type                 character*(32)
+  type                 character*(64)
   num                  integer
   coef                 double precision   (basis_num,mo_num)
-  class                character*(32)     (mo_num)
-  symmetry             character*(32)     (mo_num)
+  class                character*(64)     (mo_num)
+  symmetry             character*(64)     (mo_num)
   occupation           double precision   (mo_num)
 
 mo_1e_int
@@ -68,5 +82,3 @@ mo_2e_int
   eri_lr_num         integer
   eri_lr_indices     integer          (4,mo_2e_int_eri_lr_num)
   eri_lr_values      double precision (mo_2e_int_eri_lr_num)
-
-
