--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,19 +12,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install extra repository
-        run: sudo add-apt-repository ppa:kelleyk/emacs
-
-      - name: refresh apt
-        run: sudo apt-get update
-
-      - name: install dependencies
-        run: sudo apt-get install emacs26
+        run: sudo add-apt-repository ppa:kelleyk/emacs ; sudo apt-get update ; sudo apt-get install emacs26
 
       - name: install htmlize
         run: git clone https://github.com/hniksic/emacs-htmlize && cp emacs-htmlize/htmlize.el docs/
 
       - name: make
-        run: make doc
+        run: ./configure.sh ; make doc
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
